<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/Button_to_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:layout_marginBottom="44dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computerHandImage"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/myHandImage"
        android:layout_width="217dp"
        android:layout_height="192dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/my_hand"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="@+id/solo_game_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rock" />

    <ImageView
        android:id="@+id/computerHandImage"
        android:layout_width="212dp"
        android:layout_height="193dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/computer_hand"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myHandImage"
        app:layout_constraintVertical_bias="0.12"
        app:srcCompat="@drawable/rock" />

    <TextView
        android:id="@+id/solo_game_result"
        android:layout_width="218dp"
        android:layout_height="37dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/computerHandImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myHandImage" />

    <Button
        android:id="@+id/Button_to_another_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="44dp"
        android:text="@string/button_to_another_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toEndOf="@+id/Button_to_menu"
        app:layout_constraintTop_toBottomOf="@+id/computerHandImage"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>