<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/rock"
        android:layout_width="85dp"
        android:layout_height="95dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="75dp"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="@+id/game_text_4"
        app:layout_constraintEnd_toStartOf="@+id/scissors"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_text_3"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/rock" />

    <ImageButton
        android:id="@+id/scissors"
        android:layout_width="85dp"
        android:layout_height="95dp"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="50dp"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="@+id/game_text_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_text_3"
        app:srcCompat="@drawable/scissors" />

    <ImageButton
        android:id="@+id/paper"
        android:layout_width="85dp"
        android:layout_height="95dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="75dp"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="@+id/game_text_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/scissors"
        app:layout_constraintTop_toBottomOf="@+id/game_text_3"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/paper" />

    <TextView
        android:id="@+id/game_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="97dp"
        android:layout_marginBottom="107dp"
        android:text="@string/game_text"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/game_text_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/game_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="64dp"
        android:text="@string/game_text_2"
        android:textSize="18dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/game_text_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_text_1" />

    <TextView
        android:id="@+id/game_text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/game_text_3"
        android:textSize="15dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_text_2" />

    <TextView
        android:id="@+id/game_text_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="58dp"
        android:text="@string/game_text_4"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scissors"
        app:layout_constraintVertical_bias="0.513" />
</androidx.constraintlayout.widget.ConstraintLayout>